fix:added @;@ to letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h3 {
     font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02em
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 p {
